# Newton

./: .gitignore  CHANGELOG.md  PRD.md  README.md  TODOS.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.hermes/plans/: 2026-05-06_093510-newton-task5-plan-provenance.md  2026-05-06_094152-newton-task5-plan-provenance.md  2026-05-06_120814-newton-task6-plan-run-handoff.md
docs/: agent-runtime-usage.md  playwright-backend.md  post-release-tracks.md  qa-planning.md  release-ci.md  scenario-schema.md  troubleshooting.md
docs/plans/: 2026-05-06-cross-platform-qa-harness.md
plugins/newton/.claude-plugin/: plugin.json
qa/inputs/: login-policy.md  login-ticket.md
qa/scenarios/: cross-platform-login-smoke.yaml  web-login-smoke.yaml
scripts/: demo-web-release.sh  install.sh
src/newton/: __init__.py  agent_planner.py  agent_planning_bundle.py  bug_draft.py  bundle_review.py  cli.py  handoff.py  models.py  plan_provenance.py  planner.py  planning_bundle.py  planning_bundle_validation.py  planning_eval.py  reporting.py  run_index.py  runner.py  scenario_loader.py  tracker_update.py
tests/: conftest.py  test_agent_planner.py  test_agent_planning_bundle.py  test_bug_draft.py  test_bundle_review.py  test_claude_plugin.py  test_cli.py  test_dogfood.py  test_install_script.py  test_ios_maestro.py  test_models.py  test_planner.py  test_planning_bundle.py  test_planning_bundle_validation.py  test_planning_eval.py  test_release_docs.py  test_reporting.py  test_runner.py  test_scenario_loader.py  test_tracker_update.py  test_web_playwright.py
(+63 files in other folders)
