[project]
name = "newton-qa"
version = "0.1.0"
description = "Agent-native QA planning and cross-platform execution harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
web = ["playwright>=1.45.0"]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]

[project.scripts]
newton = "newton.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newton"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
